Apply deltaspike test for annotated type builder, bring in literal items, get working with jakarta